# gaudi-reference-cloud

./: .bazelrc  .bdsignore.all  .gitignore  BUILD.bazel  CONTRIBUTING.md  Makefile  README.md  WORKSPACE  deps.bzl  go.work
deployment/: BUILD.bazel  artifacts.bzl  deploy-ssh-proxy-server.md  deployment-pipeline.groovy  deployment-procedure.md  deployment-to-development-clusters.md  deployment-to-staging.md  deployment.bzl
deployment/argocd/: .gitignore  BUILD.bazel  README.md
deployment/argocd/idc-argocd-initial-data/: README.md
deployment/charts/argo-cd-resources/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/armada/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/authz/: BUILD.bazel  Chart.yaml  README.md  values.yaml
deployment/charts/baremetal-enrollment-api/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/baremetal-enrollment-operator/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/baremetal-enrollment-task/: BUILD.bazel  Chart.yaml
deployment/charts/baremetal-operator/: .gitignore  BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/baremetal-operator-ns/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/billing/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/billing-aria/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/billing-intel/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/billing-schedulers/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/billing-standard/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/bm-dnsmasq/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/bm-instance-operator/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/bm-validation-operator/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/bucket-metering-monitor/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/bucket-replicator/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/cloudaccount/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/cloudaccount-enroll/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/cloudcredits/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/cloudcredits-worker/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/cloudmonitor/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/cloudmonitor-logs-api-server/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/compute-api-server/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/compute-crds/: BUILD.bazel  Chart.yaml
deployment/charts/compute-metering-monitor/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/compute-resources/: BUILD.bazel  Chart.yaml  README.md
deployment/charts/console/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/database-creator/: Chart.yaml  values.yaml
deployment/charts/dataloader/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/debug-tools/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/dhcp-proxy/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/dpai/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/firewall-crds/: BUILD.bazel  Chart.yaml
deployment/charts/firewall-operator/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/fleet-admin-api-server/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/fleet-admin-ui-server/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/fleet-node-reporter/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/git-to-grpc-synchronizer/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/grpc-reflect/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/grpc-rest-gateway/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/idc-common/: BUILD.bazel  Chart.yaml  values.yaml
deployment/charts/idc-versions/: BUILD.bazel  Chart.yaml
deployment/charts/idcs-init-k8s-resources/: BUILD.bazel  Chart.yaml  values.yaml
deployment/common/: README.md  deploy-on-k8s.sh  freeport.py  http-proxy.conf  install_requirements.sh
deployment/helmfile/: BUILD.bazel  README.md  _common.tpl  defaults.yaml.gotmpl  environments.yaml  helmfile-adminPortal.yaml  helmfile-argocd.yaml  helmfile-armada.yaml  helmfile-authz.yaml  helmfile-billing.yaml  helmfile-cloudaccount.yaml  helmfile-cloudcredits.yaml  helmfile-cloudmonitor.yaml  helmfile-cloudmonitorLogs.yaml  helmfile-compute.yaml  helmfile-computeApiServer.yaml  helmfile-computeBm.yaml  helmfile-computeBmEnrollment.yaml  helmfile-computeBmInstanceOperator.yaml  helmfile-computeBmMetal3.yaml  helmfile-computeBmValidationOperator.yaml  helmfile-computeInstanceReplicator.yaml  helmfile-computeMeteringMonitor.yaml  helmfile-computePopulateInstanceType.yaml  helmfile-computePopulateMachineImage.yaml  helmfile-computePopulateSubnet.yaml  helmfile-computeSshProxy.yaml  helmfile-computeVmInstanceOperator.yaml  helmfile-computeVmInstanceScheduler.yaml  helmfile-console.yaml  helmfile-coredns.yaml  helmfile-dataloader.yaml  helmfile-debugTools.yaml  helmfile-dpai.yaml  helmfile-dump.yaml  helmfile-externalSecrets.yaml  helmfile-firewall.yaml  helmfile-fleetAdmin.yaml  helmfile-grafana.yaml  helmfile-grpc.yaml  (+35 more)
deployment/kind/: deploy-kind.sh  deploy-network-cluster-in-kind.sh  ingress-nginx.yaml
deployment/localstack/: init.sh  setup-localstack.sh
deployment/push/: BUILD.bazel  push.bzl
deployment/registry/: nginx.conf  start_registry.sh
deployment/universe_deployer/: BUILD.bazel  README.md  commit_metadata.json  universe_config.bzl  universe_config_test.bzl  universe_deployer.bzl
docs/: .gitignore  BUILD.bazel  (+4 more)
docs/source/: BUILD.bazel  Makefile  categories.txt  conf.py  jupyterlab.json
idcs_domain/sds-controller/: BUILD.bazel  GitVersion.yml  MODULE.bazel  README.md  WORKSPACE.bzlmod  extensions.bzl  gen.go  go.mod  go.sum  repositories.bzl  requirements.in  requirements_lock.txt
universe_deployer/environments/: BUILD.bazel  pdx03-c01-rgcp001-vm-10.json  pdx03-c01-rgcp001-vm-5.json  pdx03-c01-rgcp001-vm-6.json  pdx03-c01-rgcp001-vm-8.json  pdx03-c03-rgcp001-vm-8.json  prod.json  staging.json  testing1.json
(+8019 files in other folders)
