# This file contains targets to build Helm charts.
# See https://github.com/masmovil/bazel-rules

load("//build/helm:helm-chart-package.bzl", "helm_chart")

helm_chart(
    name = "chart",
    package_name = "baremetal-enrollment-api",  # Must not have underscores.
    srcs = glob([
        "*.yaml",
        "templates/**",
    ]),
    image = "//go/svc/baremetal_enrollment:baremetal_enrollment_api_image",
    values_tag_yaml_path = "apiServer.image.tag",
    visibility = ["//visibility:public"],
    chart_deps = ["//deployment/charts/idc-common:chart"],
)
