# This file contains targets to build Helm charts.
# See https://github.com/masmovil/bazel-rules

load("//build/helm:helm-chart-package.bzl", "helm_chart")

helm_chart(
  name = "chart",
  srcs = glob([
    "*.yaml", 
    "templates/**",
  ]),
  image  = "//go/svc/cloudaccount:cloudaccount_image",
  package_name = "cloudaccount",  # Must not have underscores.
  values_tag_yaml_path = "image.tag",
  visibility = ["//visibility:public"],
  chart_deps = ["//deployment/charts/idc-common:chart"]
)
