# This file contains targets to build Helm charts.

load("//build/helm:helm-chart-package.bzl", "helm_chart")

helm_chart(
  name = "chart",
  srcs = glob([
    "*.yaml", 
    "templates/**",
  ]),
  image  = "//go/pkg/fleet_admin/api_server:fleet_admin_api_server_image",
  package_name = "fleet-admin-api-server",  # Must not have underscores.
  values_tag_yaml_path = "image.tag",
  visibility = ["//visibility:public"],
  chart_deps = ["//deployment/charts/idc-common:chart"]
)
