# This file contains targets to build Helm charts.
# See https://github.com/masmovil/bazel-rules

load("//build/helm:helm-chart-package.bzl", "helm_chart")

helm_chart(
    name = "chart",
    package_name = "loadbalancer-operator",  # Must not have underscores.
    srcs = glob([
        "*.yaml",
        "templates/**",
    ]),
    chart_deps = ["//deployment/charts/idc-common:chart"],
    image = "//go/pkg/loadbalancer_operator:loadbalancer_operator_image",
    values_tag_yaml_path = "image.tag",
    visibility = ["//visibility:public"],
)
